testfilesTODO/advanced_tests/SemanticErrors/incompatibleTypes1SymbolTable.dot
digraph AST {
  "126405676751152" [label=""];
  "126405676751152" -> "126405676748560";
  "126405676748560" [label="main: INT
x: INT"];
}
